--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="second">
                 <h1>UBIT</h1>
                 <p>Umaer Basha Institute of Information Technology <br> The Department of Computer Science, University
-                    of Karachi was established by a resolution of Academic Council in its meeting held on november 27
+                    of Karachi was established by resolution of Academic Council in its meeting held on november 27
                     1984 and it began functioning in the academic year 1985-&shy;86. At the initial level DCS was
                     offering a degree program in master of Computer Science (MCS) and become one of the first
                     institutions in Karachi imparting education in Computer science and technology.</p>
